--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@
     color:WHITE;
     border-right:2px solid white;
     padding-right:20px;
+    white-space: nowrap;
 }
 input{
    width: 40%;
@@ -39,4 +40,5 @@ input{
     list-style-type: none;
     margin: 20px ;
     font-weight: bold;
+    white-space: nowrap;
 }
