--- a/index.css
+++ b/index.css
@@ -87,11 +87,20 @@ span{
     font-weight: 5000PX;
 }
 
-.icon1, .icon2, .icon3 {
+.icon1 {
+      display: flex;
+    justify-content: center;
+}
+
+.icon2{
     display: flex;
     justify-content: center;
 }
 
+.icon3{
+    display: flex;
+    justify-content: center;
+}
 .services1{
     margin: 30px 60px;
     color: white;
@@ -99,13 +108,13 @@ span{
 }
 
 .services2{
-    margin: 30px 110px;
+    margin: 50px 200px;
     color: white;
     text-align: center;
 }
 
 .services3{
-    margin: 30px 200px;
+    margin: 50px 300px;
     color: white;
     text-align: center;
 }
@@ -113,6 +122,7 @@ span{
 .services p {
     padding: 20px 0;
 }
+
 
 .images {
     width: 100px;
